# ATS-SDK-Test

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
include/: ATSHelpers.h
libats/: AtsAcquisition.cpp  AtsAcquisition.h  AtsTypes.h
scope/: CMakeLists.txt  ControlPanelView.cpp  ControlPanelView.h  MainFrm.cpp  MainFrm.h  Resource.h  Scope.rc  ScopeApp.cpp  ScopeApp.h  ScopeDoc.cpp  ScopeDoc.h  ScopeView.cpp  ScopeView.h  pch.cpp  pch.h
src/: board_info.cpp  npt_acquire.cpp
